# oxbow

./: .base.mk  .gitignore  .package.mk  Cargo.toml  Cross.toml  Jenkinsfile  Makefile  README.adoc  deployment.tf  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: release.yml  rust.yml
ci/: Jenkinsfile  build-release.sh  build.sh  rename-artifacts.sh  setup.sh  test.sh
cli/: Cargo.toml
cli/src/: main.rs
crates/: Makefile
crates/oxbow/: Cargo.toml
crates/oxbow-lambda-shared/: Cargo.toml
crates/oxbow-lambda-shared/src/: lib.rs  trigger.rs
crates/oxbow-sqs/: Cargo.toml  Makefile
crates/oxbow-sqs/src/: lib.rs
crates/oxbow/src/: lib.rs  lock.rs  write.rs
deployment/: advanced.tf  shared.tf  simple.tf
examples/: README.adoc
lambdas/: Makefile
lambdas/auto-tag/: Cargo.toml
lambdas/auto-tag/src/: main.rs
lambdas/cdf-to-csv/: Cargo.toml  README.adoc
lambdas/cdf-to-csv/src/: main.rs  mysql_value.rs  s3_upload.rs
lambdas/cdf-to-csv/tests/data/: row.json
lambdas/deltadog/: Cargo.toml  README.adoc
lambdas/deltadog/src/: main.rs
lambdas/file-loader/: Cargo.toml  README.adoc
lambdas/file-loader/src/: main.rs
lambdas/glue-create/: Cargo.toml  README.adoc
lambdas/glue-create/src/: main.rs
lambdas/glue-sync/: Cargo.toml  README.adoc
lambdas/glue-sync/src/: main.rs
lambdas/group-events/: Cargo.toml  README.adoc
lambdas/group-events/src/: main.rs
lambdas/oxbow/: Cargo.toml  README.adoc
lambdas/oxbow/src/: main.rs
lambdas/parquet-concat/: Cargo.toml  README.adoc
lambdas/parquet-concat/src/: main.rs
lambdas/sqs-ingest/: Cargo.toml  README.adoc  diagram.dot
lambdas/sqs-ingest/src/: main.rs
lambdas/webhook/: Cargo.toml  README.adoc
lambdas/webhook/src/: main.rs
shared/src/: lib.rs
src/: cli.rs  lambda.rs  lib.rs  main.rs
tests/: integration_perform_conversions.rs
tests/data/: bigger-than-a-batch.jsonl  s3-event-multiple-urlencoded.json  s3-event-multiple.json  s3-event-tables.json  s3-put-event.json  s3-test-event.json  senators.json  senators.jsonl
tests/data/hive/faker_products/: 1701800282197_0.parquet
tests/data/hive/gcs-export/ds=2023-12-12/: testing_oxbow-partitioned2_ds=2023-12-12_000000000000.parquet  testing_oxbow-partitioned2_ds=2023-12-12_000000000001.parquet
