[workspace]
members = [
    "cli",
    "crates/*",
    "lambdas/*",
]
resolver = "2"

[workspace.package]
version = "0.9.0"
edition = "2021"
keywords = ["deltalake", "parquet", "lambda", "delta"]
homepage = "https://github.com/buoyant-data/oxbow"
repository = "https://github.com/buoyant-data/oxbow"
description = "Tooling for converting directories of Apache Parquet files into Delta Lake tables"
license-file = "LICENSE.txt"

[workspace.dependencies]
anyhow = "=1"
deltalake = { version = "0.16.5", features = ["s3", "json"]}
tokio = { version = "=1", features = ["macros"] }
serde_json = "1"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter", "tracing-log"] }
url = { version = "2.3", features = ["serde"] }

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
incremental = false
opt-level = "z"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

