[workspace]
members = [
    "cli",
    "crates/*",
    "lambdas/*",
]
resolver = "2"

[workspace.package]
version = "0.11.1"
edition = "2021"
keywords = ["deltalake", "parquet", "lambda", "delta", "sqs"]
homepage = "https://github.com/buoyant-data/oxbow"
repository = "https://github.com/buoyant-data/oxbow"
description = "Toolbox for converting or generating Delta Lake tables with AWS Lambda and more"
license-file = "LICENSE.txt"

[workspace.dependencies]
anyhow = "=1"
chrono = "0.4.31"
aws_lambda_events = { version = "0.12.0", default-features = false, features = ["sns", "sqs", "s3"] }
deltalake = { version = "0.16.5", features = ["s3", "json"]}
tokio = { version = "=1", features = ["macros"] }
serde_json = "1"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter", "tracing-log"] }
url = { version = "2.3", features = ["serde"] }

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
incremental = false
opt-level = "z"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

