[workspace]
members = [
    "cli",
    "crates/*",
    "lambdas/*",
]
resolver = "2"

[workspace.package]
version = "1.4.0"
edition = "2021"
keywords = ["deltalake", "parquet", "lambda", "delta", "sqs"]
homepage = "https://github.com/buoyant-data/oxbow"
repository = "https://github.com/buoyant-data/oxbow"
description = "Toolbox for converting or generating Delta Lake tables with AWS Lambda and more"
license-file = "LICENSE.txt"

[workspace.dependencies]
anyhow = "=1"
chrono = "0.4"
aws_lambda_events = { version = "0.15", default-features = false, features = ["sns", "sqs", "s3"] }
# The datafusion feature is required to support invariants which may be in error, but is required as of currently released 0.18.2
deltalake = { version = "0.26.2", features = ["s3", "json", "datafusion"]}
#deltalake = { git = "https://github.com/delta-io/delta-rs", branch = "main", features = ["s3", "json", "datafusion"]}
#deltalake = { path = "../../delta-io/delta-rs/crates/deltalake", features = ["s3", "json", "datafusion"]}
tokio = { version = "=1", features = ["macros"] }
regex = "=1"
serde = "1"
serde_json = "=1"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter", "tracing-log"] }
url = { version = "2.3", features = ["serde"] }

[profile.release]
panic = "abort"
lto = true
strip = true
codegen-units = 1
incremental = false
opt-level = "z"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

