[package]
name = "oxbow-lambda-shared"
version.workspace = true
edition.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true
license-file.workspace = true

[dependencies]
aws_lambda_events = { version = "0.10.0", default-features = false, features = ["s3", "sqs"]}
chrono = "0.4.31"
deltalake = { workspace = true }
serde = { version = "=1", features = ["rc"] }
serde_json = "=1"
urlencoding = "=2"
