[package]
name = "oxbow-lambda-shared"
version.workspace = true
edition.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true
license-file.workspace = true

[dependencies]
aws_lambda_events = { workspace = true }
deltalake = { workspace = true }

chrono = "0.4.31"
serde = { version = "=1", features = ["rc"] }
serde_json = "=1"
tracing = { workspace = true }
urlencoding = "=2"
