[package]
name = "oxbow-lambda-shared"
version.workspace = true
edition.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true
license-file.workspace = true

[dependencies]
aws_lambda_events = { workspace = true }
chrono = { workspace = true }
deltalake = { workspace = true }
tracing = { workspace = true }

serde = { version = "=1", features = ["rc"] }
serde_json = "=1"
urlencoding = "=2"
