[package]
name = "oxbow-sqs"
version.workspace = true
edition.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true
license-file.workspace = true

[dependencies]
lambda_runtime = { version = "0.11" }
anyhow = { workspace = true }
aws_lambda_events = { workspace = true, default-features = false, features = ["sqs"] }
chrono = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
aws-config = "1.5.16"
aws-sdk-sqs = "1.58.0"
url = { workspace = true }
stats_alloc = "0.1.10"

[dev-dependencies]
serial_test = "3"
