[package]
name = "oxbow"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
chrono = { workspace = true }
deltalake = { workspace = true, default-features = false }
tracing = { workspace = true }
url = { workspace = true }

dynamodb_lock = "0.6.1"
futures = "0.3.29"
rusoto_core = { version = "0.47", default-features = false, features = ["rustls"]}
rusoto_credential = { version = "0.47"}

[dev-dependencies]
fs_extra = "=1"
tempfile = "*"
tokio = { workspace = true }
