[package]
name = "auto-tag"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
anyhow = { workspace = true }
aws_lambda_events = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

oxbow-lambda-shared = { path = "../../crates/oxbow-lambda-shared" }

aws-config = { version = "1.0.1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.9.0"
lambda_runtime = "0.8.3"
