[package]
name = "cdf-to-csv"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
aws-config = "1.5.10"
aws-sdk-s3 = "1.60.0"
aws_lambda_events = { workspace = true, default-features = false, features = ["sqs"] }
chrono = { workspace = true }
csv = "1.3.1"
lambda_runtime = { version = "0.11" }
deltalake = { workspace = true }
oxbow-lambda-shared = { path = "../../crates/oxbow-lambda-shared" }
serde_json = "1.0.140"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
