[package]
name = "cdf-to-csv"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
aws_lambda_events = { workspace = true, default-features = false, features = ["sqs"] }
chrono = { workspace = true }
lambda_runtime = "0.14.2"
object_store = { version = "0.12.1", features = ["cloud"]}
deltalake = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }

csv = "1.3.1"
oxbow-lambda-shared = { path = "../../crates/oxbow-lambda-shared" }


[dev-dependencies]
futures = "*"
