[package]
name = "deltadog"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
anyhow = { workspace = true }
aws_lambda_events = { workspace = true }
deltalake = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url.workspace = true

oxbow-lambda-shared = { path = "../../crates/oxbow-lambda-shared" }

lambda_runtime = { version = "0.8" }
dipstick = "0.9.1"
