[package]
name = "glue-sync"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
anyhow = { workspace = true }
aws_lambda_events = { workspace = true }
deltalake = { workspace = true }
regex = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }

oxbow-lambda-shared = { path = "../../crates/oxbow-lambda-shared" }

aws-sdk-glue = "1.26.0"
aws-config = { version = "1.2.0", features = ["behavior-version-latest"] }
lambda_runtime = { version = "0.11" }
aws-smithy-runtime-api = "1.4.0"
