[package]
name = "group-events"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
anyhow = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }

oxbow = { path = "../../crates/oxbow" }
oxbow-lambda-shared = { path = "../../crates/oxbow-lambda-shared" }

aws-config = { version = "1.0.1", features = ["behavior-version-latest"] }
aws_lambda_events = { version = "0.10.0", default-features = false, features = ["sqs"]}
aws-sdk-sqs = "1.1.0"
lambda_runtime = { version = "0.8" }
