[package]
name = "group-events"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
anyhow = { workspace = true }
aws_lambda_events = { workspace = true }
rand = "0.9"
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }

oxbow = { path = "../../crates/oxbow" }
oxbow-lambda-shared = { path = "../../crates/oxbow-lambda-shared" }

aws-config = { version = "1.0.1", features = ["behavior-version-latest"] }
aws-sdk-sqs = "1.1.0"
lambda_runtime = { version = "0.8" }
md5 = "=0.7.0"
uuid = { version = "1.6.1", features = ["v4"] }
