[package]
name = "oxbow-lambda"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
anyhow = { workspace = true }
aws_lambda_events = { workspace = true }
deltalake = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }

oxbow = { path = "../../crates/oxbow" }
oxbow-lambda-shared = { path = "../../crates/oxbow-lambda-shared" }

dynamodb_lock = "0.6.1"
lambda_runtime = { version = "0.11" }
rusoto_core = { version = "0.47", default-features = false, features = ["rustls"]}
rusoto_credential = { version = "0.47"}
rusoto_s3 = { version = "0.47", default-features = false, features = ["rustls"] }
serde = { version = "=1", features = ["rc"] }
