[package]
name = "sqs-ingest"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
lambda_runtime = { version = "0.11" }
oxbow = { path = "../../crates/oxbow" }

anyhow = { workspace = true }
aws_lambda_events = { workspace = true, default-features = false, features = ["sqs"] }
chrono = { workspace = true }
deltalake = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
aws-config = "1.5.16"
aws-sdk-sqs = "1.58.0"


[dev-dependencies]
serial_test = "3"
