[package]
name = "webhook"
version = "0.1.0"
edition.workspace = true

[dependencies]
http = "1.1.0"
lambda_http = "0.10.0"

oxbow = { path = "../../crates/oxbow" }
oxbow-lambda-shared = { path = "../../crates/oxbow-lambda-shared" }

chrono = { workspace = true }
deltalake = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
arrow-json = "50.0.0"
arrow-schema = "50.0.0"

